Fixed CO04 button alignment.

--- a/#dev/scss/blocks/CO04.scss
+++ b/#dev/scss/blocks/CO04.scss
@@ -1,3 +1,7 @@
 .block-CO04 {
 	padding: 30px 0;
+
+	.btn {
+		margin: 0 10px;
+	}
 }
